adicionei um parágrato

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt maxime, quos repudiandae quibusdam molestiae quae sit ut vero nostrum quisquam veritatis perspiciatis illo voluptates facere voluptas hic consequuntur et? Quae.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sapiente repellat quasi earum corrupti ducimus. Aspernatur sequi doloremque saepe soluta expedita ullam amet, quis voluptate odio tempora maxime nam. Vitae?</p>
 </body>
 </html>
